samples/_failures_safe/1761454255_0d762e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_230a3193.c: In function ‘main’:
./samples/SAFE/__tmp_230a3193.c:135:12: error: missing terminating " character
  135 |     printf("\nTrans
      |            ^~~~~~~~
./samples/SAFE/__tmp_230a3193.c:135:5: error: expected expression at end of input
  135 |     printf("\nTrans
      |     ^~~~~~
./samples/SAFE/__tmp_230a3193.c:135:5: error: expected declaration or statement at end of input
